--- a/estilo.css
+++ b/estilo.css
@@ -46,6 +46,24 @@ body {
 	background-color: #3480c1;
 }
 
+.banner {
+	height: 300px;
+	background-color: #347aba;
+}
+
+.bannerinterior {
+	width: 1000px;
+	margin: auto;
+}
+
+.banneresquerda {
+	float:left;
+}
+
+.bannerdireita {
+	float:right;
+}
+
 
 
 
