--- a/estilo.css
+++ b/estilo.css
@@ -64,6 +64,57 @@ body {
 	float:right;
 }
 
+.bannerdireita img {
+	margin-right: 55px;
+}
+.frase1 {
+	font-size: 48px;
+	color: ffffff;
+	margin-top: 60px;
+}
+
+.frase2 {
+	font-size: 20px;
+	color: ffffff;
+}
+
+.botao {
+	background-color: ffc001;
+	width: 282px;
+	height: 56px;
+	font-size: 20px;
+	text-align: center;
+	line-height: 56px;
+	margin-top: 20px;
+	cursor: pointer;
+	border-radius: 5px;
+}
+
+.conteudointerno {
+	width: 1000px;
+	margin: auto;
+}
+.outrosprodutos {
+ 	height: 90px;
+ 	font-size: 20px;
+ 	text-align: center;
+ 	line-height: 90px;
+}
+
+.fotos img {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.rodape {
+	background-color: #347aba;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	color: ffffff;
+	margin-top: 40px;
+}
+
 
 
 
